test/integration/model-name/stanc.expected
  $ ../../../../install/default/bin/stanc --name=foo  bad.stan

Semantic error in file bad.stan, line 3, columns 6-9:
   -------------------------------------------------
     1:  data {
     2:    // declare matching model name should fail
     3:    int foo;  
               ^
     4:  }
     5:  parameters {
   -------------------------------------------------

Identifier 'foo' clashes with model name.

  $ ../../../../install/default/bin/stanc --name=foo  good.stan

// Code generated by Stan version 2.18.0
#include <stan/model/model_header.hpp>
namespace foo_model_namespace {
static int current_statement_begin__;

using std::istream;
using std::string;
using std::stringstream;
using std::vector;
using stan::io::dump;
using stan::math::lgamma;
using stan::model::prob_grad;
using namespace stan::math;

current_statement_loc__ = "";


}
